--- a/dmit2015-demo/pom.xml
+++ b/dmit2015-demo/pom.xml
@@ -137,6 +137,11 @@
 		    <version>1.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt</artifactId>
+			<version>1.9.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
