Simplifed and improved CRUD example on Shipper to use more CDI features

--- a/dmit2015-demo/pom.xml
+++ b/dmit2015-demo/pom.xml
@@ -109,6 +109,12 @@
 			<artifactId>arquillian-transaction-jta</artifactId>
 			<version>1.0.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jboss.arquillian.extension</groupId>
+			<artifactId>arquillian-drone-webdriver-depchain</artifactId>
+			<type>pom</type>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
 		<dependency>
