--- a/dmit2015-demo/src/main/webapp/WEB-INF/web.xml
+++ b/dmit2015-demo/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,10 @@
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
 	<context-param>
+		<param-name>javax.faces.validator.ENABLE_VALIDATE_WHOLE_BEAN</param-name>
+		<param-value>true</param-value>
+	</context-param>
+	<context-param>
 		<param-name>BootsFaces_USETHEME</param-name>
 		<param-value>default</param-value>
 	</context-param>
