--- a/dmit2015-demo/src/main/webapp/WEB-INF/web.xml
+++ b/dmit2015-demo/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,7 @@
 		<param-name>javax.faces.validator.ENABLE_VALIDATE_WHOLE_BEAN</param-name>
 		<param-value>true</param-value>
 	</context-param>
+	
 	<context-param>
 		<param-name>BootsFaces_USETHEME</param-name>
 		<param-value>default</param-value>
@@ -35,6 +36,10 @@
 		<welcome-file>/index.xhtml</welcome-file>
 	</welcome-file-list>
 
+	<mime-mapping>
+	    <extension>xhtml</extension>
+	    <mime-type>application/xml</mime-type>
+	</mime-mapping>
 	<mime-mapping>
 		<extension>eot</extension>
 		<mime-type>application/vnd.ms-fontobject</mime-type>
