Added another example on class-level constraints on requiredDate

--- a/dmit2015-demo/src/main/resources/ValidationMessages.properties
+++ b/dmit2015-demo/src/main/resources/ValidationMessages.properties
@@ -1,1 +1,2 @@
 northwind.entity.Job.phone=Invalid Phone Number format. Must be a valid Canadian phone number.
+northwind.entity.Order.requiredDate=Required date must be three days after the order date.
