Updated demo to include security features.

--- a/dmit2015-demo/src/main/webapp/WEB-INF/web.xml
+++ b/dmit2015-demo/src/main/webapp/WEB-INF/web.xml
@@ -60,4 +60,86 @@
 		<extension>woff2</extension>
 		<mime-type>font/woff2</mime-type>
 	</mime-mapping>
+	
+	
+	
+	<security-constraint>
+		<display-name>Use HTTPS only</display-name>
+		<web-resource-collection>
+			<web-resource-name>sslResources</web-resource-name>
+			<url-pattern>/*</url-pattern>
+		</web-resource-collection>
+		<user-data-constraint>
+			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
+		</user-data-constraint>
+	</security-constraint>
+	
+	<security-role>
+		<role-name>Administrator</role-name>
+	</security-role>
+ 	<security-role>
+		<role-name>Customer</role-name>
+	</security-role>
+	<security-role>
+		<role-name>Employee</role-name>
+	</security-role>
+	
+ 	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>queryResources</web-resource-name>
+			<url-pattern>/northwind/query/*</url-pattern>
+			<url-pattern>/northwind/report/*</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>Administrator</role-name>
+			<role-name>Employee</role-name>
+		</auth-constraint>
+	</security-constraint>
+	
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>reportResources</web-resource-name>
+			<url-pattern>/northwind/regionDetail.xhtml</url-pattern>
+			<url-pattern>/northwind/territoryDetail.xhtml</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>Administrator</role-name>
+			<role-name>Employee</role-name>
+			<role-name>Customer</role-name>
+		</auth-constraint>
+	</security-constraint>
+	
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>reportResources</web-resource-name>
+			<url-pattern>/northwind/viewRegions.xhtml</url-pattern>
+			<url-pattern>/northwind/viewTerritories.xhtml</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>*</role-name>
+		</auth-constraint>
+	</security-constraint>
+	
+		<!-- Error pages -->
+
+	<error-page>
+		<error-code>401</error-code>
+		<location>/WEB-INF/errorpages/401.xhtml</location>
+	</error-page>
+	<error-page>
+		<error-code>403</error-code>
+		<location>/WEB-INF/errorpages/403.xhtml</location>
+	</error-page>
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/errorpages/404.xhtml</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/WEB-INF/errorpages/500.xhtml</location>
+	</error-page>
+	<error-page>
+		<exception-type>javax.faces.application.ViewExpiredException</exception-type>
+		<location>/WEB-INF/errorpages/expired.xhtml</location>
+	</error-page>
 </web-app>
