--- a/dmit2015-demo/pom.xml
+++ b/dmit2015-demo/pom.xml
@@ -78,6 +78,17 @@
 			<version>8.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.glassfish.soteria</groupId>
+		    <artifactId>javax.security.enterprise</artifactId>
+		    <version>1.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>4.0.1</version>
+		    <scope>provided</scope>
+		</dependency>
 
 		<!-- Needed for running tests (you may also use TestNG) -->
 		<dependency>
