--- a/dmit2015-demo/src/main/webapp/WEB-INF/web.xml
+++ b/dmit2015-demo/src/main/webapp/WEB-INF/web.xml
@@ -113,11 +113,12 @@
 	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>reportResources</web-resource-name>
-			<url-pattern>/northwind/viewRegions.xhtml</url-pattern>
-			<url-pattern>/northwind/viewTerritories.xhtml</url-pattern>
+			<url-pattern>/northwind/region/viewRegions.xhtml</url-pattern>
+			<url-pattern>/northwind/territory/viewTerritories.xhtml</url-pattern>
+			<url-pattern>/northwind/shipper/viewShippers.xhtml</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
-			<role-name>*</role-name>
+			<role-name>**</role-name>
 		</auth-constraint>
 	</security-constraint>
 	
