--- a/dmit2015-demo/src/main/webapp/WEB-INF/web.xml
+++ b/dmit2015-demo/src/main/webapp/WEB-INF/web.xml
@@ -62,7 +62,6 @@
 	</mime-mapping>
 	
 	
-<!-- 
 	<security-constraint>
 		<display-name>Use HTTPS only</display-name>
 		<web-resource-collection>
@@ -73,7 +72,7 @@
 			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
 		</user-data-constraint>
 	</security-constraint>
- -->	
+
 	
 	<security-role>
 		<role-name>Administrator</role-name>
@@ -121,6 +120,20 @@
 			<role-name>**</role-name>
 		</auth-constraint>
 	</security-constraint>
+
+
+<!-- 	<security-constraint> -->
+<!-- 		<web-resource-collection> -->
+<!-- 			<web-resource-name>reportResources</web-resource-name> -->
+<!-- 			<url-pattern>/northwind/region/editRegion.xhtml</url-pattern> -->
+<!-- 			<url-pattern>/northwind/territory/editTerritory.xhtml</url-pattern> -->
+<!-- 			<url-pattern>/northwind/shipper/editShipper.xhtml</url-pattern> -->
+<!-- 		</web-resource-collection> -->
+<!-- 		<auth-constraint> -->
+<!-- 			<role-name>Administrator</role-name> -->
+<!-- 			<role-name>Employee</role-name> -->
+<!-- 		</auth-constraint> -->
+<!-- 	</security-constraint> -->
 	
 		<!-- Error pages -->
 
