--- a/dmit2015-demo/src/main/webapp/WEB-INF/web.xml
+++ b/dmit2015-demo/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-	id="WebApp_ID" version="4.0">
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	id="WebApp_ID" version="3.1">
 
 	<display-name>DMIT2015 Demo Project</display-name>
 
@@ -62,16 +62,16 @@
 	</mime-mapping>
 	
 	
-	<security-constraint>
-		<display-name>Use HTTPS only</display-name>
-		<web-resource-collection>
-			<web-resource-name>sslResources</web-resource-name>
-			<url-pattern>/*</url-pattern>
-		</web-resource-collection>
-		<user-data-constraint>
-			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
-		</user-data-constraint>
-	</security-constraint>
+<!-- 	<security-constraint> -->
+<!-- 		<display-name>Use HTTPS only</display-name> -->
+<!-- 		<web-resource-collection> -->
+<!-- 			<web-resource-name>sslResources</web-resource-name> -->
+<!-- 			<url-pattern>/*</url-pattern> -->
+<!-- 		</web-resource-collection> -->
+<!-- 		<user-data-constraint> -->
+<!-- 			<transport-guarantee>CONFIDENTIAL</transport-guarantee> -->
+<!-- 		</user-data-constraint> -->
+<!-- 	</security-constraint> -->
 
 	
 	<security-role>
